<resources>
    <string name="app_name">Chat App</string>

    <!-- signIn layout -->
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_hint">sign in</string>
    <string name="create_new_account">Create New Account</string>

    <!-- signUp layout -->
    <string name="add_image">Add Image</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_hint">sign up</string>

    <!-- activity_users -->
    <string name="select_user">Select User</string>

    <!-- activity_chat -->
    <string name="input_message_hint">Type a message</string>
    <string name="text_online">Online</string>

    <!-- toasts-->
    <string name="select_profile_image">Select profile image</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="password_and_confirm_password_same">Password and confirm password, must be same</string>
    <string name="unable_sign_in">Unable to sign in</string>
    <string name="token_updated">Token updated successfully</string>
    <string name="token_unable">Unable to update token</string>
    <string name="signing_out">Signing out…</string>
    <string name="Unable_sign_out">Unable to sign out</string>
    <string name="failure">failure</string>
    <string name="notification_successfully">Notification sent successfully</string>
</resources>